added DB integration

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,10 @@ VITE_CALENDAR_API_KEY=
 
 # Calendar API Base URL (optional, uses provider default if not set)
 VITE_CALENDAR_BASE_URL=
+
+
+VITE_POSTGRES_USER=homeai
+VITE_POSTGRES_PASSWORD=homeai_password
+VITE_POSTGRES_HOST=home-ai-postgres
+VITE_POSTGRES_PORT=5432
+VITE_POSTGRES_DB=homeai
